# NESpresso

./: CMakeLists.txt  README.MD  TestFramework.cpp  main.cpp  xplusy.nes
src/: Cpu.cpp  Cpu.hpp  Memory.cpp  Memory.hpp
test/: RunNestest.cpp
